@@ -1,6 +1,12 @@
 package org.eclipse.cargotracker.domain.model.handling;
 
-import java.util.*;
+import java.util.ArrayList;
+import java.util.Collection;
+import java.util.Collections;
+import java.util.Comparator;
+import java.util.HashSet;
+import java.util.List;
+import java.util.Objects;
 
 public class HandlingHistory {
     // private static final Logger LOGGER = Logger.getLogger(HandlingHistory.class.getName());
@@ -38,35 +44,8 @@ public class HandlingHistory {
     public HandlingEvent getMostRecentlyCompletedEvent() {
         List<HandlingEvent> distinctEvents = getDistinctEventsByCompletionTime();
         // LOGGER.log(Level.INFO, "distinct events: {0}", distinctEvents);
-        if (distinctEvents.isEmpty()) {
-            return null;
-        } else {
-            return distinctEvents.get(distinctEvents.size() - 1);
-        }
+        return distinctEvents.isEmpty() ? null : distinctEvents.getLast();
     }
-
-    private boolean sameValueAs(HandlingHistory other) {
-        return other != null && this.handlingEvents.equals(other.handlingEvents);
-    }
-
-//    @Override
-//    public boolean equals(Object o) {
-//        if (this == o) {
-//            return true;
-//        }
-//        if (o == null || getClass() != o.getClass()) {
-//            return false;
-//        }
-//
-//        HandlingHistory other = (HandlingHistory) o;
-//        return sameValueAs(other);
-//    }
-//
-//    @Override
-//    public int hashCode() {
-//        return handlingEvents.hashCode();
-//    }
-
 
     @Override
     public boolean equals(Object o) {
